fix horizontal overflow

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -2,6 +2,7 @@ $color-accent: rgb(231, 181, 42);
 
 .app {
   background: rgb(241, 236, 229);
+  overflow: hidden;
 
   .button {
     display: inline-block;
@@ -22,7 +23,7 @@ section {
 }
 
 .top-section {
-  background: #fff9;
+  background: rgba(241, 171, 57, 0.904);
   min-height: calc(100vh - 50px);
 }
 
